# simtools

./: Cargo.toml  LICENSE
crates/simctl/: Cargo.toml
crates/simctl/src/: main.rs
crates/simtools/: Cargo.toml
crates/simtools/src/: lib.rs  moment.rs
crates/simtools/src/devices/: leds.rs
crates/simtools/src/devices/leds/: brows.rs  lmx.rs  mod.rs
crates/simtools/src/led/: macros.rs  mod.rs
crates/simtools/src/led/effects/: blink.rs  groups.rs  mod.rs
crates/simtools/src/led/effects/rpm/: gradient.rs  mod.rs  segments.rs
crates/simtools/src/led/profiles/: flag.rs  helpers.rs  mod.rs  rpm.rs
src/: led_state.rs  main.rs
src/devices/: buttons.rs  display.rs  leds.rs  mod.rs  rpm_leds.rs
src/led/: mod.rs
src/led/effects/: blink.rs  flag.rs  groups.rs  mod.rs
src/led/effects/rpm/: gradient.rs  mod.rs
src/led/profiles/: flag.rs  groups.rs  mod.rs  redline.rs  speed_limiter.rs
src/led/state/: flag.rs  groups.rs  mod.rs  rpm_gradient.rs
src/led/state/rpm/: gradient.rs  mod.rs
src/led_profile/: flag.rs  groups.rs  helpers.rs  mod.rs  redline.rs  rpm.rs  speed_limiter.rs
src/led_state/: flag.rs  mod.rs  rpm_gradient.rs
