[package]
name = "lmx-cli"
version = "0.1.0"
edition = "2021"
authors = ["Damir Jelić <poljar@termina.org.uk>"]
license = "MIT"
rust-version = "1.75"

[dependencies]
anyhow = "1.0.79"
cairo-rs = "0.18.5"
colorgrad = "0.6.2"
csscolorparser = "0.6.2"
clap = { version = "4.4.18", features = ["derive"] }
embedded-graphics = "0.8.1"
hidapi = { version = "2.4.1" }
itertools = "0.12.0"
rusb = "0.9.3"
strum = { version = "0.26.1", features = ["derive"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = { version = "1.0.111", features = ["raw_value"] }
simetry = { path = "../simetry/" }
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"]}
uuid = { version = "1.7.0", features = ["serde"] }
uom = { version = "0.35.0", features = ["serde"] }

[dev-dependencies]
assert_matches2 = "0.1.2"
