[workspace]
members = [
    "crates/*",
]
resolver = "2"

[workspace.package]
edition = "2021"
authors = ["Damir Jelić <poljar@termina.org.uk>"]
license = "MIT"
rust-version = "1.75"
repository = "https://github.com/poljar/simtools"

[workspace.dependencies]
anyhow = "1.0.79"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = { version = "1.0.113", features = ["raw_value"] }
simetry = { git = "https://github.com/poljar/simetry", rev = "267833877058b2881b235dccdd59b40e00e6dd1d" }
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"]}
uuid = { version = "1.7.0", features = ["serde"] }
uom = { version = "0.35.0", features = ["serde"] }
similar-asserts = "1.5.0"
